# arksia

./: AUTHORS.rst  HISTORY.rst  LICENSE.txt  MANIFEST.in  README.md  bulk_pipeline_results.py  bulk_pipeline_run.py  coverage.md  d_76f83e8ff6c730ce___init___py.html  d_76f83e8ff6c730ce_bulk_pipeline_results_py.html  d_76f83e8ff6c730ce_bulk_pipeline_run_py.html  d_76f83e8ff6c730ce_extract_radial_profile_py.html  d_76f83e8ff6c730ce_imager_py.html  d_76f83e8ff6c730ce_input_output_py.html  d_76f83e8ff6c730ce_parametric_fitter_py.html  d_76f83e8ff6c730ce_parametric_forms_py.html  d_76f83e8ff6c730ce_pipeline_py.html  d_76f83e8ff6c730ce_plot_py.html  default_gen_pars.json  default_source_pars.json  description_pars_gen.json  description_pars_source.json  extract_radial_profile.py  gen_pars.json  gen_pars_description.json  image_radial_profile.py  imager.py  index.html  input_output.py  io.py  pars_gen.json  pars_source.json  plot.py  radial_pipeline.py  setup.cfg  source_pars.json  source_pars_description.json  status.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  tests.yml
<CODE_NAME>/: tests.py
arksia/: __init__.py  analysis.py  bulk_pipeline_results.py  bulk_pipeline_run.py  description_pars_gen.json  description_pars_source.json  extract_radial_profile.py  imager.py  input_output.py  parameteric_forms.py  parametric_fitter.py  parametric_forms.py  pars_gen.json  pipeline.py  plot.py  radial_pipeline.py
test/: mockAS209.combined.corrected.briggs.2.0.3000.0.003.model.fits  mock_aspect_ratio.txt  mock_pars_phys.cv  tests.py  vis_combined.npz
test/mockAS209/: mock_aspect_ratios.txt  mock_pars_source.json
