# to set version dynamically: https://github.com/pypa/setuptools/issues/1724#issuecomment-627241822

[metadata]
name = arksia
version = attr: arksia.__version__
author = Jeff Jennings, Sebastian Marino
author_email = jjennings1519@gmail.com
description = arksia, part of the ALMA large program ARKS
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPLv3
license_file = LICENSE.txt
include_package_data = True
url = https://github.com/jeffjennings/arksia
project_urls =
    Bug Tracker = https://github.com/jeffjennings/arksia/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords =
    science
    astronomy
    interferometry

[options]
packages = arksia

# python_requires docs: https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
python_requires = >=3.9

# PEP 440 - pinning package versions: https://www.python.org/dev/peps/pep-0440/#compatible-release
install_requires =
    numpy>=1.21.6
    matplotlib>=3.4.0
    scipy>=1.9.0
    # require frank and mpol directly from current main repo 
    frank @ git+https://github.com/discsim/frank@master
    mpol @ git+https://github.com/MPoL-dev/MPoL@main

# additional files to include in install
[options.package_data]
* = pars_gen.json, description_pars_gen.json, description_pars_source.json

# extras_require syntax:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html?highlight=options.extras_require#configuring-setup-using-setup-cfg-files
[options.extras_require]
# 'analysis' packages needed to run parametric fits with parametric_fitter.py
analysis = jax>=0.4.20
           optax>=0.1.7
           tqdm>=4.65.0

test = pytest
       coverage==6.2
       coverage-badge==1.1.0
